--- a/VueOpenai/package.json
+++ b/VueOpenai/package.json
@@ -9,7 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.45"
+    "axios": "^1.3.4",
+    "element-plus": "^2.3.0",
+    "pinia": "^2.0.33",
+    "sass": "^1.59.3",
+    "scss": "^0.2.4",
+    "unplugin-auto-import": "^0.15.1",
+    "unplugin-vue-components": "^0.24.1",
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
